# Precision-Library

./: CMakeLists.txt  README.md  compile.sh
include/: cadna.mod  cadna_add.mod  cadna_cestac.mod  cadna_convert.mod  cadna_div.mod  cadna_equ.mod  cadna_ge.mod  cadna_gt.mod  cadna_intr.mod  cadna_le.mod  cadna_lt.mod  cadna_math.mod  cadna_mul.mod  cadna_str.mod  cadna_sub.mod  cadna_to.mod  cadna_type.mod  mpal.mod  mpal_basic.mod  mpal_blas.mod  mpal_eig.mod  rp_emulator.mod
src/: configure.F90  mpal.F90  mpal_EPS.F90  mpal_basic.F90  mpal_init.F90  mpal_intrinsic.F90  mpal_operation.F90  mpal_report.F90  mpal_sbits.F90  mpal_type.F90
src/blas/: dot.F90  gemm.F90  gemv.F90  ger.F90  mpal_blas.F90  symv.F90  syr2k.F90  trmm.F90  trmv.F90
src/eig/: auxiliary.F90  dlaed0.F90  lamch.F90  larst.F90  lasr.F90  mpal_eig.F90  ormqr.F90  ormtr.F90  stedc.F90  steqr.F90  sterf.F90  syevd.F90  sytrd.F90
test/: Makefile  test1.f90  test2.f90  test3.f90
